modify application layout

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,14 +7,15 @@
     = csrf_meta_tags
   %body
     #container
-      = render 'shared/nav'
-      - flash.each do |name, msg|
-        = content_tag :div, msg, id: "flash_#{name}"
-      = yield
-      = render 'shared/modal'
-      .clearfix
-      .navbar.navbar-default#footer
-        .container
-          %h2.subvrt-header
-            = link_to 'Subvrt', "http://subvrt.com"
-          %h4.all-rights-reserved= "#{Time.now.year} All Rights Reserved"
+      #content-wrapper
+        = render 'shared/nav'
+        - flash.each do |name, msg|
+          = content_tag :div, msg, id: "flash_#{name}"
+        = yield
+        = render 'shared/modal'
+    .clearfix
+    .navbar.navbar-default#footer
+      .container#footer-container
+        %h2.subvrt-header
+          = link_to 'Subvrt', "http://subvrt.com"
+        %h4.all-rights-reserved= "#{Time.now.year} All Rights Reserved"
