#39, refactor of sorting, changing groups to have billing docs and contacts instead of users and modified tests too

--- a/app/assets/javascripts/sherman.js.coffee.erb
+++ b/app/assets/javascripts/sherman.js.coffee.erb
@@ -132,13 +132,16 @@ $ ->
 
   $('.due-date-sort , .contact-sort, .total-sort, .status-sort').click (e) ->
     e.preventDefault()
+    $(this).toggleClass('forward')
     groupId = $(this).data('group-id')
     dataType = $(this).data('type')
     ids = []
     $.map $(".line-item-show-row"), (n) ->
       ids.push($(n).data "id")
-    $(this).toggleClass('forward')
-    forward = $(this).hasClass('forward')
+    if $(this).hasClass('forward')
+      forward = 'asc'
+    else
+      forward = 'desc'
     category = $(this).data('category')
     path = $(this).attr('href')
     $.get "#{path}?type=#{dataType}&category=#{category}&forward=#{forward}&ids=#{ids}", (data) ->
