--- a/app/views/billing_docs/_index_table.html.haml
+++ b/app/views/billing_docs/_index_table.html.haml
@@ -12,10 +12,10 @@
 -elsif @kind == 'estimate'
   %table#invoices-index-table.table-striped.table-hover
     %thead.invoice-index-table-header
-      %th= link_to "Estimate Date", group_billing_docs_sort_path(current_user.group.id), class: 'due-date-sort forward', data: {type: 'contacts', category: 'invoices'}
+      %th= link_to "Estimate Date", group_billing_docs_sort_path(current_user.group.id), class: 'due-date-sort forward', data: {type: 'contacts', category: 'estimates'}
       %th Subject
       %th Note
-      %th= link_to " Contact(s)", group_billing_docs_sort_path(current_user.group.id), class: 'contact-sort forward', data: {type: 'contacts', category: 'invoices'}
-      %th= link_to 'Total ($)', group_billing_docs_sort_path(current_user.group.id), class: 'total-sort forward', data: {type: 'total', category: 'invoices'}
+      %th= link_to " Contact(s)", group_billing_docs_sort_path(current_user.group.id), class: 'contact-sort forward', data: {type: 'contacts', category: 'estimates'}
+      %th= link_to 'Total ($)', group_billing_docs_sort_path(current_user.group.id), class: 'total-sort forward', data: {type: 'total', category: 'estimates'}
     %tbody#invoice-table-entries
       = render @invoices
