--- a/app/views/billing_docs/new_estimate.html.haml
+++ b/app/views/billing_docs/new_estimate.html.haml
@@ -38,4 +38,4 @@
         #sum
         .form-group
           .post-buttons
-            = f.submit "Create Estimate", :class => 'btn btn-success create-estimate-button, data: {id: @invoice.id, group_id: current_user.group.id}
+            = f.submit "Create Estimate", :class => 'btn btn-success create-estimate-button', data: {id: @invoice.id, group_id: current_user.group.id}
