--- a/app/views/billing_docs/new_invoice.html.haml
+++ b/app/views/billing_docs/new_invoice.html.haml
@@ -2,7 +2,7 @@
   .col-md-6.col-md-offset-3
     %h2= "New Invoice"
     .form-group
-      = form_for @invoice, url: group_billing_docs_path(current_user.group, 'invoice') do |f|
+      = form_for @invoice, url: group_billing_docs_kind_path(current_user.group, 'invoice') do |f|
         .form-group
           = f.label :title
           = f.text_field :title, class: "form-control"
