--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,13 +7,12 @@
     = csrf_meta_tags
   %body
     #container
-      #content-wrapper
-        = render 'shared/nav'
-        - flash.each do |name, msg|
-          = content_tag :div, msg, id: "flash_#{name}"
-        = yield
-        = render 'shared/modal'
-    .clearfix
+      = render 'shared/nav'
+      - flash.each do |name, msg|
+        = content_tag :div, msg, id: "flash_#{name}"
+      = yield
+      = render 'shared/modal'
+      .clearfooter
     .navbar.navbar-default#footer
       .container#footer-container
         %h2.subvrt-header
