--- a/app/views/contacts/index.html.haml
+++ b/app/views/contacts/index.html.haml
@@ -1,5 +1,5 @@
 .row
-  .col-md-10.col-md-offset-1
+  .col-lg-12
     .add-contact-button
       = link_to "Create Contact", new_group_contact_path(current_user.group.id), title: 'Add Contact', data: {gmodal: true}, class: 'btn btn-success btn-lg'
       %br
