--- a/app/assets/stylesheets/sherman.css.scss
+++ b/app/assets/stylesheets/sherman.css.scss
@@ -1,5 +1,7 @@
 @import "http://fonts.googleapis.com/css?family=Exo:900";
 
+@import "http://fonts.googleapis.com/css?family=Roboto+Slab:300";
+
 .call-to-action-invoice-estimate,.add-contact-button {
   float      : right;
   margin-top : 2.5%
@@ -21,7 +23,7 @@
 
   background-color : #ffc0cb;
   text-align       : center;
-  border           : 1px solid grey;
+  border           : 1px solid grey
 }
 
 #landing-begin h1 {
@@ -30,7 +32,7 @@
 
 #company-form-addition {
   height : 75px;
-  margin : 0!important;
+  margin : 0!important
 }
 
 #line-items-table th {
@@ -42,7 +44,7 @@
 .add-line-item {
   display       : inline-block;
   margin-bottom : 5px;
-  margin-left   : 5px;
+  margin-left   : 5px
 }
 
 .line-item-title {
@@ -50,12 +52,12 @@
 }
 
 .due-date-label {
-  display : block;
+  display : block
 }
 
 #line-items-table td {
   margin-right : 10px;
-  font-size    : .75em;
+  font-size    : .75em
 }
 
 #line-items-table input {
@@ -66,7 +68,7 @@
 #line-items-table td:nth-child(5n) {
   position   : relative!important;
   top        : -2px;
-  text-align : center;
+  text-align : center
 }
 
 #sum {
@@ -93,7 +95,8 @@
   background-image    : url(airmail-top.png),url(airmail-bottom.png);
   background-position : 0 0,0 bottom;
   background-repeat   : no-repeat;
-  background-repeat-x : initial;
+
+  background-repeat-x : initial
 }
 
 #contact-pic img {
@@ -103,7 +106,7 @@
 #contact-pic {
   display : inline-block;
   float   : right;
-  width   : 250px;
+  width   : 250px
 }
 
 #basic-bio-container {
@@ -116,7 +119,7 @@
 
   background          : url(http://fc04.deviantart.net/fs70/f/2013/148/5/8/3x5_notecard_by_minty_melodies-d66zrul.jpg) no-repeat;
   background-position : 0 0,0 bottom;
-  background-size     : 100%;
+  background-size     : 100%
 }
 
 #contact-name {
@@ -124,6 +127,7 @@
   display      : inline-block;
   float        : left;
   top          : 20px;
+
   padding-left : 5px
 }
 
@@ -135,17 +139,18 @@
   position        : relative;
   clear           : left;
   top             : 35px;
-  list-style-type : none;
+
+  list-style-type : none
 }
 
 .contact-details li {
   margin-bottom : 10px;
-  font-size     : 120%;
+  font-size     : 120%
 }
 
 .billing-doc-header {
   position : relative;
-  float    : left;
+  float    : left
 }
 
 .show-description {
@@ -156,7 +161,7 @@
 
 #line-items-show-table {
   width          : 100%;
-  border-spacing : 10px;
+  border-spacing : 10px
 }
 
 table {
@@ -169,7 +174,9 @@ table {
 
 .total-cost {
   float       : right;
+
   padding     : 2%;
+
   font-size   : 150%;
   font-weight : 700
 }
@@ -179,14 +186,17 @@ table {
   display      : inline-block;
   float        : right;
   top          : -40px;
+
   margin-right : 20px
 }
 
 .sent-show-mailer {
   display             : inline-block;
   vertical-align      : middle;
+
   margin-bottom       : 0;
   padding             : 6px 12px;
+
   cursor              : pointer;
   background-color    : #AFB09C;
   font-size           : 14px;
@@ -198,44 +208,50 @@ table {
   border-color        : #ccc;
   border-radius       : 4px;
   white-space         : nowrap;
+
   -webkit-user-select : none;
   -moz-user-select    : none;
   -ms-user-select     : none;
   -o-user-select      : none;
-  user-select         : none;
+  user-select         : none
 }
 
-.invoices {
+#invoices {
   clear       : both;
+
   width       : 100%;
+
   font-weight : 200;
-  color       : #0B2C3C;
+  color       : #0B2C3C
 }
 
-.invoices td {
+#invoices td {
   width   : 128px;
-  padding : 10px;
+  padding : 10px
 }
 
 #invoices-title {
   clear         : both;
-  margin-top    : 10%;
+
+  margin-top    : 3%;
+  padding-left  : 30px;
+
   font-style    : italic;
   font-weight   : 100;
-  border-bottom : 1px dashed #000;
+  border-bottom : 1px dashed #000
 }
 
 #invoices-row td:third-child {
-  font-size : 80%;
+  font-size : 80%
 }
 
 .see-all-invoice {
   display : inline;
-  float   : right;
+  float   : right
 }
 
 .see-all-invoice-link {
-  font-size : 65%;
+  font-size : 65%
 }
 
 .hide {
@@ -247,25 +263,12 @@ table {
 }
 
 .edit-invoice {
-  float : right;
+  float : right
 }
 
 .sherman-pic {
-  width : 100%;
-}
-
-.sherman-landing {
-  position         : relative;
-  margin-bottom    : 20px;
-  padding-top      : 20px;
-  padding-bottom   : 20px;
-  background-color : #000;
-}
-
-.landing-one,.landing-invoice,.landing {
-  position : absolute;
-  float    : left;
-  width    : 50%
+  height : 95%;
+  width  : 100%;
 }
 
 .landing-one {
@@ -278,13 +281,18 @@ table {
   color : #fff
 }
 
-.invoices {
-  font-size : 120%
+#invoices {
+  float       : left;
+
+  width       : 90%;
+  margin-left : 5%;
+  font-size   : 120%;
 }
 
-.invoices table {
-  width       : 100%;
-  white-space : nowrap;
+#invoices table {
+  width        : 100%;
+  padding-left : 30px;
+  white-space  : nowrap;
 }
 
 #invoices-paginate,#estimates-paginate {
@@ -293,14 +301,16 @@ table {
 }
 
 #flash_notice {
-  height      : 40px;
-  background  : #ffc0cb;
-  line-height : 40px;
-  text-align  : center;
+  height        : 40px;
+  margin-bottom : 0;
+
+  background    : #ffc0cb;
+  line-height   : 40px;
+  text-align    : center
 }
 
 .note-td {
-  font-size : 80%
+  font-size : 65%
 }
 
 .pagination {
@@ -314,71 +324,75 @@ table {
 #flash-validation-contact {
   margin-bottom    : 20px;
   background-color : #ffc0cb;
-  text-align       : center;
+  text-align       : center
 }
 
 #contact {
   clear     : both;
   margin    : 10% 5%;
-  font-size : 120%;
+  font-size : 120%
 }
 
 .edit_contact input {
-  margin-bottom : 10px;
+  margin-bottom : 10px
 }
 
 #contact table {
   width       : 100%;
-  white-space : nowrap;
+  white-space : nowrap
 }
 
 #contact-header {
   clear         : both;
   font-style    : italic;
-  border-bottom : 1px dashed #000;
+  border-bottom : 1px dashed #000
 }
 
 .contact-photo-index {
   height  : 150px;
   width   : 150px;
+
   opacity : .7;
-  border  : 1px solid grey;
+  border  : 1px solid grey
 }
 
 .contact-photo-index:hover {
-  opacity : 1;
+  opacity : 1
 }
 
 .contact-profile {
   height    : 300px;
   width     : auto;
+
   font-size : 70%;
-  word-wrap : break-word;
+  word-wrap : break-word
 }
 
 .contact-profile .contact-email {
-  overflow : auto;
+  overflow : auto
 }
 
 .contact-container {
-  height : 250px;
+  height : 250px
 }
 
 #contacts-paginate {
-  float : right;
+  float : right
 }
 
 .contact-name,.contact-phone-number {
   width      : 150px;
-  text-align : center;
+  text-align : center
 }
 
 body {
-  background : url(paper_fibers.png);
+  margin-bottom : 20px;
+  background    : url(paper_fibers.png);
 }
+
 .edit-button {
   clear      : both;
-  margin-top : 4%;
+  margin-top : 4%
 }
 
 #contact {
@@ -395,27 +409,20 @@ body {
 
 .back-to-contact-list-estimates {
   width         : 37%;
-  margin-bottom : 10px;
+  margin-bottom : 10px
 }
 
-.subvrt-header {
-  display         : inline;
-  font-family     : 'Exo',sans-serif;
-  text-decoration : none;
-}
-
-.subvrt-header a {
-  color : #fff
-}
 
 .subvrt-header a:hover {
-  color           : #F08C89;
-  text-decoration : none;
+  text-decoration : none
 }
 
 .all-rights-reserved {
-  display : inline;
-  float   : right;
+  display       : inline;
+  float         : left;
+
+  margin-bottom : 9px;
+  margin-left   : 15px
 }
 
 #footer {
@@ -423,39 +430,376 @@ body {
   margin-bottom    : 0;
   padding-top      : 20px;
   padding-bottom   : 20px;
-  background-color : #0B2C3C;
+
+  background-color : #F08C89;
   color            : #fff;
 }
 
-#sherman-nav {
-  padding-bottom : 20px;
+@media only screen and (min-width:769px) and (max-width:1281px) {
+  #sherman-nav {
+  padding-bottom:20px;
+  margin-bottom:0;
+  border-bottom:1px solid #fff
+    }
+
+  .landing-one,.landing-invoice,.landing {
+  position : absolute;
+  float    : left;
+  width    : 50%
+  }
+
+  .subvrt-header {
+  display         : inline;
+  font-family     : 'Exo',sans-serif;
+  text-decoration : none;
+  }
+
+  .subvrt-header a {
+    float : left;
+    color : #fff;
+  }
+
+  .navbar-header, .navbar-right{
+    position  : relative;
+    top       : 10px;
+    font-size : 1.25em
+    }
+
+  html {
+    height : 100%
+    }
+
+  body {
+    height      : 100%;
+    padding     : 0;
+    font-family : 'Roboto Slab'!important;
+    color       : #0B2C3C;
+    }
+
+  h1, h2, h3, h4, h5, h6 {
+    font-family : 'Roboto Slab',sans-serif
+    }
+
+  .table tfoot > tr > td {
+    margin-right : 15px!important
+    }
+
+  .btn-success {
+    background-color : #F08C89;
+    border-color     : #F08C89
+    }
+
+  .sherman-landing {
+  position         : relative;
+
+  margin-bottom    : 20px;
+  padding-top      : 10px;
+  padding-bottom   : 15px;
+
+  background-color : #000
 }
 
-.navbar-header,#navbar-content {
-  position  : relative;
-  top       : 10px;
-  font-size : 1.25em
+  .btn-success:hover,
+  .btn-success:focus,
+  .btn-success:active,
+  .btn-success.active,
+  .open .dropdown-toggle.btn-success {
+    color: #ffffff;
+    background-color: #F08C89;
+    border-color: #F08C89;
+    }
+
+    .btn-info {
+      background-color: #11455E;
+      border-color: #11455E;
+    }
+
+  .btn-info:hover,
+  .btn-info:focus,
+  .btn-info:active,
+  .btn-info.active,
+  .open .dropdown-toggle.btn-info {
+    background-color: #11455E;
+    border-color: #11455E;
+    }
+
+  .btn-info.disabled,
+  .btn-info[disabled],
+  fieldset[disabled] .btn-info,
+  .btn-info.disabled:hover,
+  .btn-info[disabled]:hover,
+  fieldset[disabled] .btn-info:hover,
+  .btn-info.disabled:focus,
+  .btn-info[disabled]:focus,
+  fieldset[disabled] .btn-info:focus,
+  .btn-info.disabled:active,
+  .btn-info[disabled]:active,
+  fieldset[disabled] .btn-info:active,
+  .btn-info.disabled.active,
+  .btn-info[disabled].active,
+  fieldset[disabled] .btn-info.active {
+      background-color: #11455E;
+      border-color: #11455E;
+    }
+
+  #container {
+  position      : relative;
+  min-height    : 100%;
+  margin-bottom : -110px;
+  }
+  #footer {
+  position : relative;
+  height   : 70px;
+  }
+
+  .clearfooter {
+    clear  : both;
+    height : 50px;
+    }
+
+  #main {
+    margin-bottom : 20px
+    }
+
+    .navbar-header .navbar-brand {
+    font-size   : 32px;
+    font-weight : 700
+  }
 }
 
-.navbar-brand {
-  position    : relative;
-  bottom      : 12px;
-  font-size   : 32px;
-  font-weight : 700;
+.landing-one h1,.landing-invoice h1 {
+  margin-left : 30px
 }
 
-#container {
-min-height: 100%;
-margin-bottom: -120px;
-position: relative;
+#footer-container {
+  margin-left : 15px
 }
 
-#footer {
-height: 80px;
-position: relative;
+.invoice-index-table-header th {
+  padding-left : 30px
 }
 
-.clearfooter{
-  height: 60px;
-  clear: both;
+#invoice-table-entries td {
+  padding-left : 30px
 }
+
+.call-to-action-invoice-estimate {
+  margin-right : 85px
+}
+
+.add-contact-button {
+  margin-right : 85px
+}
+
+.edit-sign-in-container {
+  margin-top    : 5%;
+  margin-bottom : 5%
+}
+
+#new_user .form-control {
+  width : 80%
+}
+
+.edit-signup-container {
+  margin-top    : 3%;
+  margin-bottom : 5%
+}
+
+.edit-forgot-password-container {
+  margin-top    : 5%;
+  margin-bottom : 5%
+}
+
+#edit-body {
+  margin-bottom : 3%
+}
+
+.navbar-inverse .navbar-toggle {
+  border-color: white;
+}
+
+.navbar-inverse .navbar-toggle:hover,
+.navbar-inverse .navbar-toggle:focus {
+  background-color: black;
+}
+
+  .navbar-default{
+    border-top: 1px solid white;
+    }
+
+  .navbar-inverse{
+    background-color: #F08C89;
+  }
+  .navbar-inverse, .navbar-brand{
+    color: white!important;
+  }
+  .navbar-inverse, .navbar-text{
+    color: white;
+  }
+  .navbar-inverse .navbar-nav > li > a {
+    color:white;
+  }
+
+  .navbar-inverse .navbar-nav > li > a:hover,
+  .navbar-inverse .navbar-nav > li > a:focus {
+    color: white!important;
+  }
+
+  .navbar-inverse .navbar-nav > .open > a,
+  .navbar-inverse .navbar-nav > .open > a:hover,
+  .navbar-inverse .navbar-nav > .open > a:focus {
+    color: #ffffff;
+    background-color: #0B2C3C;
+  }
+
+@media only screen
+and (max-width : 480px) {
+  h1{
+    font-size: 80%;
+    font-family: 'Roboto Slab'
+
+  }
+  .sherman-landing h1{
+    margin-left: 14%;
+  }
+
+  .landing-one, .landing-invoice{
+    float: left;
+    width: 50%;
+    position: absolute;
+  }
+  .landing-one{
+    top: 32px;
+  }
+
+  .landing-invoice{
+    top: 83px;
+  }
+
+ #line-items-table .line-item-row input{
+    width: 100%;
+    margin-left: 5px;
+  }
+
+  #contact table{
+    font-size: 50%!important;
+  }
+
+  .add-contact-button{
+    width: 78px;
+  }
+  .contact-name, .contact-phone-number{
+    margin-left: -30px;
+  }
+
+  .contact-email{
+    font-size: 70%;
+  }
+
+  .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
+    color: white;
+  }
+
+  .contact-container{
+    display: inline-block;
+    width: 135px;
+    height: 135px;
+    margin-bottom: 5%;
+    font-size: 80%;
+    float: left;
+  }
+  .contact-photo img{
+    height : 85px;
+    width: 85px;
+
+  }
+
+  .post-buttons{
+    margin-left: 6px;
+  }
+
+  #invoices {
+  float       : left;
+  width       : 100%;
+  margin-left : 0%;
+  font-size   : 55%;
+  font-weight: 900;
+  margin-bottom: 10%;
+}
+
+  #invoices table {
+  width: 100%;
+  padding-left: 0px;
+  white-space: inherit;
+}
+.btn-lg{
+  padding: 10px 10px;
+}
+
+.call-to-action-invoice-estimate{
+  width: 75px;
+}
+.call-to-aciton-invoice-estimate .btn-success{
+  font-size: 80%;
+}
+
+  #sherman-nav{
+    margin-bottom: 0
+  }
+
+    #container {
+  position      : relative;
+  min-height    : 100%;
+  margin-bottom : -80px;
+  }
+  #footer {
+  position : relative;
+  height   : 70px;
+  }
+
+  .clearfooter {
+    clear  : both;
+    height : 65px;
+    }
+    html{
+      height: 100%;
+    }
+
+  body {
+    height      : 100%;
+    padding     : 0;
+    font-family : 'Roboto Slab'!important;
+    color       : #0B2C3C;
+    }
+
+
+  .navbar-inverse{
+    border-bottom: 1px solid;
+    }
+
+  .subvrt-header {
+    display         : inline;
+    font-size: 1.3em;
+    font-family     : 'Exo',sans-serif;
+    text-decoration : none;
+    }
+
+  .subvrt-header a {
+    float : left;
+    color : #fff;
+  }
+
+  .all-rights-reserved {
+  display       : inline;
+  float         : left;
+  font-size: 1em;
+  position: relative;
+  bottom: 7px;
+  margin-bottom : 20px;
+  margin-left   : 10px;
+  }
+
+/* Styles */
+}
+
+
