--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,19 @@
-<h2>Forgot your password?</h2>
+<div id= "edit-forgot-password">
+  <div class="row">
+    <div class="col-md-4 col-md-offset-4 edit-forgot-password-container">
 
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
+      <h2>Forgot your password?</h2>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+      <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+        <%= devise_error_messages! %>
 
-  <div><%= f.submit "Send me reset password instructions" %></div>
-<% end %>
+        <div><%= f.label :email %><br />
+        <%= f.email_field :email, :autofocus => true, class: 'form-control' %></div><br/>
 
-<%= render "devise/shared/links" %>
+        <div><%= f.submit "Send me reset password instructions", class: 'btn btn-success' %></div>
+      <% end %>
+
+      <%= render "devise/shared/links" %>
+    </div>
+  </div>
+</div>
