--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,25 +1,31 @@
-<h2>Sign up</h2>
-<% resource.build_group %>
+<div id= "edit-signup">
+  <div class="row">
+    <div class="col-md-4 col-md-offset-4 edit-signup-container">
+      <h2>Sign up</h2>
+      <% resource.build_group %>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+      <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+        <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+        <div><%= f.label :email %><br />
+        <%= f.email_field :email, :autofocus => true, class: 'form-control' %></div>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+        <div><%= f.label :password %><br />
+        <%= f.password_field :password, class: 'form-control' %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+        <div><%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, class: 'form-control' %></div>
 
-  <div><%= f.fields_for :group do |g| %>
-    <%= g.label :group %><br />
-    <%= g.text_field :name %>
-    <% end %>
+        <div><%= f.fields_for :group do |g| %>
+          <%= g.label :group %><br />
+          <%= g.text_field :name, class: 'form-control' %>
+          <% end %>
+        </div></br>
+
+        <div><%= f.submit "Sign up", class: 'btn btn-success' %></div>
+      <% end %>
+
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
