#41 capybara tests minus JS actions

--- a/app/assets/stylesheets/sherman.css.scss
+++ b/app/assets/stylesheets/sherman.css.scss
@@ -442,6 +442,11 @@ body {
   border-bottom:1px solid #fff
     }
 
+  .show-billing-docs-container{
+    margin-top: 25px;
+    margin-bottom: 25px;
+  }
+
   .landing-one,.landing-invoice,.landing {
   position : absolute;
   float    : left;
