--- a/app/views/billing_docs/show.html.haml
+++ b/app/views/billing_docs/show.html.haml
@@ -1,5 +1,5 @@
 .row
-  .col-md-7.col-md-offset-2
+  .col-md-7.col-md-offset-2.show-billing-docs-container
     = link_to 'Edit', edit_group_billing_doc_path(current_user.group.id, @invoice.id), class: 'edit-invoice'
     .billing-doc
       .billing-doc-show-title
