change landing page

--- a/app/assets/stylesheets/sherman.css.scss
+++ b/app/assets/stylesheets/sherman.css.scss
@@ -446,6 +446,11 @@ body {
   border-bottom:1px solid #fff
     }
 
+  .landing-invoice li{
+    margin-bottom: 10px;
+  }
+
+
   #billing-search{
     margin-top: 5%;
     clear: both;
