--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,6 +1,9 @@
 .sherman-landing
   = image_tag "sherman.jpg", class: 'sherman-pic'
   .landing-one
-    %h1 Sherman lets you expedite your finances <em>digitally</em>
-  .landing-invoice
-    %h1 As you create and manage your <strong>invoices</strong> and <strong>estimates</strong>
+    %h1 Sherman lets you manage your finances <em>digitally</em>
+  %ul.landing-invoice
+    %h3
+      %li Estimate your expenses
+      %li Track invoices
+      %li Maintain an Address Book
