--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,9 +1,13 @@
 .sherman-landing
   = image_tag "sherman.jpg", class: 'sherman-pic'
-  .landing-one
-    %h1 Sherman lets you manage your finances <em>digitally</em>
-  %ul.landing-invoice
-    %h3
-      %li Estimate your expenses
-      %li Track invoices
-      %li Maintain an Address Book
+  .landing-ding
+    .landing-one
+      %h1
+        Sherman lets you
+        %br
+        manage your finances <em>digitally</em>
+    %ul.landing-invoice
+      %h3
+        %li Estimate your expenses
+        %li Track invoices
+        %li Maintain an Address Book
